# uminho

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  README.md  SUMMARY.md  book.json  package-lock.json  package.json
1st/1/Cálculo/: § Cálculo.md
1st/1/Cálculo/Exercices/: Calculo_1718_F1_r.md
1st/1/Cálculo/Notes/: 1. Introdução.md  2. Limites e Continuidade.md  3. Função Inversa e Composição de Funções.md  4. Derivadas e Aplicações.md  5. Primitivas.md  6. Integral de Riemann.md  7. Integrais Impróprios.md  8. Séries Numéricas e Séries de Potências.md  § Cálculo.md
1st/1/Elementos de Engenharia de Sistemas/: § Elementos de Engenharia de Sistemas.md
1st/1/Elementos de Engenharia de Sistemas/Notes/: 1. Introdução.md  2. Modelos de Simulação.md  3. Teoria das Filas de Espera.md  4. Modelação e Optimização.md  5. Aplicações e Utilização de Software.md  § Elementos de Engenharia de Sistemas.md
1st/1/Laboratórios de Informática I/: § Laboratórios de Informática I.md
1st/1/Laboratórios de Informática I/Notes/: § Laboratórios de Informática I.md
1st/1/Laboratórios de Informática I/Project/: .gitignore  README.md
1st/1/Programação Funcional/: § Programação Funcional.md
1st/1/Programação Funcional/Exercices/: PF_1415_ER.hs  PF_1415_T2.hs  PF_1516_ER.hs  PF_1516_TF.hs  PF_1617_TF.hs  PF_1718_F1.hs  PF_1718_F10.hs  PF_1718_F2.hs  PF_1718_F3.hs  PF_1718_F4.hs  PF_1718_F5.hs  PF_1718_F6.hs  PF_1718_F7.hs  PF_1718_F8.hs  PF_1718_F9.hs  PF_1718_Q1.hs
1st/1/Programação Funcional/Notes/: 2. Listas & Recursividade.md  3. Algoritmos de Ordenação.md  4. Ordem Superior.md  5. Tipos Algébricos.md  6. Árvores.md  7. Tipos, classes e polimorfismo.md  8. Input & Output.md  § Programação Funcional.md
1st/1/Tópicos de Matemática Discreta/: § Tópicos de Matemática Discreta.md
1st/1/Tópicos de Matemática Discreta/Notes/: 1. Noções Elementares de Lógica.md  2. Teoria Elementar de Conjuntos.md  3. Indução nos Naturais.md  4. Funções.md  5. Relações Binárias.md  6. Grafos.md  § Tópicos de Matemática Discreta.md
1st/1/Álgebra Linear/: § Álgebra Linear.md
1st/1/Álgebra Linear/Notes/: 1. Matrizes.md  2. Determinantes.md  3. Sistemas de Equações.md  4. Espaços Vectoriais Reais.md  5. Valores e Vectores Próprios.md  6. Aplicações Lineares.md  § Álgebra Linear.md
1st/2/Análise/: § Análise.md
1st/2/Análise/Notes/: 1. Noções Topológicas.md  2. Funções Reais.md  3. Limites e Continuidade.md  4. Diferenciação.md  5. Extremos.md  6. Integrais Múltiplos.md  7. Integrais de Linha e Superfiície.md  § Análise.md
1st/2/Laboratórios de Informática II/: § Laboratórios de Informática II.md
1st/2/Laboratórios de Informática II/Notes/: 1. Variáveis.md  2. Instruções Condicionais e Cíclicas.md  3. Vetores e Matrizes.md  4. Estruturas de Dados Dinâmicos.md  6. Ordenação.md  7. Estruturas de Dados Dinâmicas.md  8. Monitorização e Optimização do Código.md  § Laboratórios de Informática II.md
1st/2/Laboratórios de Informática II/Project/: README.md
1st/2/Lógica/: § Lógica.md
1st/2/Lógica/Notes/: 1. Lógica Proposicional.md  2. Sintaxe - Semântica.md  3. Fenómenos Lógicos.md  4. Sistemas Dedutivos.md  5. Correção e Completude.md  § Lógica.md
1st/2/Programação Imperativa/: § Programação Imperativa.md
1st/2/Programação Imperativa/Exercises/: PI_1718_F1.c  PI_1718_F2.c  PI_1718_F3.c  abin.c  (+7 more)
1st/2/Sistemas de Computação/: § Sistemas de Computação.md
1st/2/Tópicos de Física Moderna/: § Tópicos de Física Moderna.md
2nd/1/Algoritmos e Complexidade/: § Algoritmos e Complexidade.md
2nd/1/Arquitetura de Computadores/: § Arquitetura de Computadores.md
2nd/1/Comunicação de Dados/: § Comunicação de Dados.md
2nd/1/Estatística Aplicada/: § Estatística Aplicada.md
2nd/1/Introdução aos Sistemas Dinâmicos/: § Introdução aos Sistemas Dinâmicos.md
2nd/2/Cálculo de Programas/: § Cálculo de Programas.md
2nd/2/Eletromagnetismo/: § Eletromagnetismo.md
2nd/2/Laboratórios de Informática III/: § Laboratórios de Informática III.md
2nd/2/Programação Orientada aos Objetos/: § Programação Orientada aos Objectos.md
2nd/2/Sistemas Operativos/: § Sistemas Operativos.md
3rd/1/Bases de Dados/: § Bases de Dados.md
3rd/1/Desenvolvimento de Sistemas de Software/: § Desenvolvimento de Sistemas de Software.md
3rd/1/Modelos Determinísticos de Investigação Operacional/: § Modelos Determinísticos de Investigação Operacional.md
3rd/1/Métodos Numéricos e Otimização não Linear/: § Métodos Numéricos e Otimização não Linear.md
3rd/1/Redes de Computadores/: § Redes de Computadores.md
3rd/1/Sistemas Distribuídos/: § Sistemas Distribuídos.md
3rd/2/Computação Gráfica/: § Computação Gráfica.md
3rd/2/Computação Gráfica/Exercises/guide_01/: CMakeLists.txt
3rd/2/Computação Gráfica/Exercises/guide_01/lib/: glew.h
3rd/2/Computação Gráfica/Exercises/guide_01/src/: main.cpp
3rd/2/Computação Gráfica/Exercises/guide_08/: CMakeLists.txt  catmull-rom.cpp
3rd/2/Computação Gráfica/Exercises/guide_08/scripts/: config.sh
3rd/2/Computação Gráfica/Exercises/guide_09/: CMakeLists.txt
3rd/2/Computação Gráfica/Exercises/guide_09/scripts/: config.sh
3rd/2/Computação Gráfica/Exercises/guide_11/: CMakeLists.txt  main.cpp
3rd/2/Computação Gráfica/Exercises/guide_11/scripts/: config.sh
3rd/2/Computação Gráfica/Exercises/guide_12/: CMakeLists.txt  main.cpp
3rd/2/Computação Gráfica/Exercises/guide_12/scripts/: config.sh  helpers.sh
3rd/2/Computação Gráfica/Exercises/guide_5/: CMakeLists.txt  main.cpp
3rd/2/Computação Gráfica/Exercises/guide_5/scripts/: config.sh
3rd/2/Comunicações por Computador/: § Comunicações por Computador.md
3rd/2/Laboratórios de Informática IV/: § Laboratórios de Informática IV.md
3rd/2/Modelos Estocásticos de Investigação Operacional/: § Modelos Estocásticos de Investigação Operacional.md
3rd/2/Processamento de Linguagens/: § Processamento de Linguagens.md
3rd/2/Sistemas de Representação de Conhecimento e Raciocínio/: § Sistemas de Representação de Conhecimento e Raciocínio.md
assets/styles/: website.scss
assets/styles/continuum/: cms.css  cp.css  cxm.css  xfp.css
(+459 files in other folders)
